include/laprdus/laprdus_api.h


typedef struct LaprdusEngine* LaprdusHandle;
typedef struct LaprdusStream* LaprdusStreamHandle;
typedef enum LaprdusError {
    LAPRDUS_OK = 0,
    LAPRDUS_ERROR_INVALID_HANDLE = -1,
    LAPRDUS_ERROR_NOT_INITIALIZED = -2,
    LAPRDUS_ERROR_INVALID_PATH = -3,
    LAPRDUS_ERROR_LOAD_FAILED = -4,
    LAPRDUS_ERROR_SYNTHESIS_FAILED = -5,
    LAPRDUS_ERROR_OUT_OF_MEMORY = -6,
    LAPRDUS_ERROR_CANCELLED = -7,
    LAPRDUS_ERROR_INVALID_PARAMETER = -8,
    LAPRDUS_ERROR_DECRYPTION_FAILED = -9,
    LAPRDUS_ERROR_FILE_NOT_FOUND = -10,
    LAPRDUS_ERROR_INVALID_FORMAT = -11
} LaprdusError;
typedef struct LaprdusAudioFormat {
    uint32_t sample_rate;       
    uint16_t bits_per_sample;   
    uint16_t channels;          
} LaprdusAudioFormat;
typedef struct LaprdusVoiceInfo {
    const char* id;              
    const char* display_name;    
    const char* language_code;   
    uint16_t language_lcid;      
    const char* gender;          
    const char* age;             
    float base_pitch;            
    const char* base_voice_id;   
    const char* data_filename;   
} LaprdusVoiceInfo;
LAPRDUS_API LaprdusHandle LAPRDUS_CALL laprdus_create(void);
LAPRDUS_API void LAPRDUS_CALL laprdus_destroy(LaprdusHandle handle);
LAPRDUS_API LaprdusError LAPRDUS_CALL laprdus_init_from_file(
    LaprdusHandle handle,
    const char* phoneme_data_path,
    const uint8_t* decryption_key,
    size_t key_size
);
LAPRDUS_API int LAPRDUS_CALL laprdus_is_initialized(LaprdusHandle handle);
LAPRDUS_API LaprdusError LAPRDUS_CALL laprdus_set_speed(
    LaprdusHandle handle,
    float speed
);
LAPRDUS_API LaprdusError LAPRDUS_CALL laprdus_set_pitch(
    LaprdusHandle handle,
    float pitch
);
LAPRDUS_API LaprdusError LAPRDUS_CALL laprdus_set_user_pitch(
    LaprdusHandle handle,
    float pitch
);
LAPRDUS_API LaprdusError LAPRDUS_CALL laprdus_set_volume(
    LaprdusHandle handle,
    float volume
);
LAPRDUS_API LaprdusError LAPRDUS_CALL laprdus_set_inflection_enabled(
    LaprdusHandle handle,
    int enabled
);
LAPRDUS_API uint32_t LAPRDUS_CALL laprdus_get_voice_count(void);
LAPRDUS_API LaprdusError LAPRDUS_CALL laprdus_get_voice_info(
    uint32_t index,
    LaprdusVoiceInfo* out_info
);
LAPRDUS_API LaprdusError LAPRDUS_CALL laprdus_get_voice_info_by_id(
    const char* voice_id,
    LaprdusVoiceInfo* out_info
);
LAPRDUS_API LaprdusError LAPRDUS_CALL laprdus_set_voice(
    LaprdusHandle handle,
    const char* voice_id,
    const char* data_directory
);
LAPRDUS_API const char* LAPRDUS_CALL laprdus_get_current_voice(LaprdusHandle handle);
LAPRDUS_API int32_t LAPRDUS_CALL laprdus_synthesize(
    LaprdusHandle handle,
    const char* text,
    int16_t** out_samples,
    LaprdusAudioFormat* out_format
);
LAPRDUS_API void LAPRDUS_CALL laprdus_free_buffer(int16_t* buffer);
LAPRDUS_API void LAPRDUS_CALL laprdus_cancel(LaprdusHandle handle);
LAPRDUS_API const char* LAPRDUS_CALL laprdus_get_error_message(LaprdusHandle handle);
LAPRDUS_API const char* LAPRDUS_CALL laprdus_get_version(void);
LAPRDUS_API void LAPRDUS_CALL laprdus_get_default_format(LaprdusAudioFormat* out_format);
LAPRDUS_API const char* LAPRDUS_CALL laprdus_error_to_string(LaprdusError error);
LAPRDUS_API LaprdusError LAPRDUS_CALL laprdus_load_dictionary(
    LaprdusHandle handle,
    const char* dictionary_path
);
LAPRDUS_API LaprdusError LAPRDUS_CALL laprdus_load_dictionary_from_memory(
    LaprdusHandle handle,
    const char* json_content,
    size_t length
);
LAPRDUS_API void LAPRDUS_CALL laprdus_clear_dictionary(LaprdusHandle handle);
LAPRDUS_API LaprdusError LAPRDUS_CALL laprdus_load_spelling_dictionary(
    LaprdusHandle handle,
    const char* dictionary_path
);
LAPRDUS_API LaprdusError LAPRDUS_CALL laprdus_load_spelling_dictionary_from_memory(
    LaprdusHandle handle,
    const char* json_content,
    size_t length
);
LAPRDUS_API void LAPRDUS_CALL laprdus_clear_spelling_dictionary(LaprdusHandle handle);
LAPRDUS_API int32_t LAPRDUS_CALL laprdus_synthesize_spelled(
    LaprdusHandle handle,
    const char* text,
    int16_t** out_samples,
    LaprdusAudioFormat* out_format
);
LAPRDUS_API LaprdusError LAPRDUS_CALL laprdus_load_emoji_dictionary(
    LaprdusHandle handle,
    const char* dictionary_path
);
LAPRDUS_API LaprdusError LAPRDUS_CALL laprdus_load_emoji_dictionary_from_memory(
    LaprdusHandle handle,
    const char* json_content,
    size_t length
);
LAPRDUS_API void LAPRDUS_CALL laprdus_clear_emoji_dictionary(LaprdusHandle handle);
LAPRDUS_API LaprdusError LAPRDUS_CALL laprdus_set_emoji_enabled(
    LaprdusHandle handle,
    int enabled
);
LAPRDUS_API int LAPRDUS_CALL laprdus_is_emoji_enabled(LaprdusHandle handle);
LAPRDUS_API LaprdusError LAPRDUS_CALL laprdus_set_sentence_pause(
    LaprdusHandle handle,
    uint32_t pause_ms
);
LAPRDUS_API LaprdusError LAPRDUS_CALL laprdus_set_comma_pause(
    LaprdusHandle handle,
    uint32_t pause_ms
);
LAPRDUS_API LaprdusError LAPRDUS_CALL laprdus_set_newline_pause(
    LaprdusHandle handle,
    uint32_t pause_ms
);
LAPRDUS_API uint32_t LAPRDUS_CALL laprdus_get_sentence_pause(LaprdusHandle handle);
LAPRDUS_API uint32_t LAPRDUS_CALL laprdus_get_comma_pause(LaprdusHandle handle);
LAPRDUS_API uint32_t LAPRDUS_CALL laprdus_get_newline_pause(LaprdusHandle handle);
LAPRDUS_API LaprdusError LAPRDUS_CALL laprdus_set_spelling_pause(
    LaprdusHandle handle,
    uint32_t pause_ms
);
LAPRDUS_API uint32_t LAPRDUS_CALL laprdus_get_spelling_pause(LaprdusHandle handle);
typedef enum LaprdusNumberMode {
    LAPRDUS_NUMBER_MODE_WHOLE = 0,      
    LAPRDUS_NUMBER_MODE_DIGIT = 1       
} LaprdusNumberMode;
LAPRDUS_API LaprdusError LAPRDUS_CALL laprdus_set_number_mode(
    LaprdusHandle handle,
    LaprdusNumberMode mode
);
LAPRDUS_API LaprdusNumberMode LAPRDUS_CALL laprdus_get_number_mode(LaprdusHandle handle);