nvda-addon/addon/synthDrivers/laprdus/_laprdus.py

# -*- coding: utf-8 -*-
# _laprdus.py - ctypes bindings for LaprdusTTS DLL
# Python 2/3 compatible for NVDA 2019.3+

from __future__ import unicode_literals, print_function, division

import ctypes
import sys
import os

# Architecture detection
_is_64bit = sys.maxsize > 2**32

# Directory structure
_addon_dir = os.path.dirname(os.path.abspath(__file__))
_voices_dir = os.path.join(_addon_dir, "voices")
_dicts_dir = os.path.join(_addon_dir, "dictionaries")

# DLL path detection
_dll_name = "laprd64.dll" if _is_64bit else "laprd32.dll"
_dll_path = os.path.join(_addon_dir, _dll_name)
_phonemes_path = os.path.join(_voices_dir, "Josip.bin")  # Default voice

# Module-level library reference
_lib = None

# =============================================================================
# Error codes (matching laprdus_api.h)
# =============================================================================

LAPRDUS_OK = 0
LAPRDUS_ERROR_INVALID_HANDLE = -1
LAPRDUS_ERROR_NOT_INITIALIZED = -2
LAPRDUS_ERROR_INVALID_PATH = -3
LAPRDUS_ERROR_LOAD_FAILED = -4
LAPRDUS_ERROR_SYNTHESIS_FAILED = -5
LAPRDUS_ERROR_OUT_OF_MEMORY = -6
LAPRDUS_ERROR_CANCELLED = -7
LAPRDUS_ERROR_INVALID_PARAMETER = -8
LAPRDUS_ERROR_DECRYPTION_FAILED = -9
LAPRDUS_ERROR_FILE_NOT_FOUND = -10
LAPRDUS_ERROR_INVALID_FORMAT = -11

# =============================================================================
# ctypes Structure Definitions
# =============================================================================

class LaprdusAudioFormat(ctypes.Structure):
    """Audio format information structure."""
    _fields_ = [
        ("sample_rate", ctypes.c_uint32),
        ("bits_per_sample", ctypes.c_uint16),
        ("channels", ctypes.c_uint16),
    ]


class LaprdusVoiceInfo(ctypes.Structure):
    """Voice information structure."""
    _fields_ = [
        ("id", ctypes.c_char_p),
        ("display_name", ctypes.c_char_p),
        ("language_code", ctypes.c_char_p),
        ("language_lcid", ctypes.c_uint16),
        ("gender", ctypes.c_char_p),
        ("age", ctypes.c_char_p),
        ("base_pitch", ctypes.c_float),
        ("base_voice_id", ctypes.c_char_p),
        ("data_filename", ctypes.c_char_p),
    ]


# Type aliases
LaprdusHandle = ctypes.c_void_p
LaprdusStreamHandle = ctypes.c_void_p
LaprdusError = ctypes.c_int

# =============================================================================
# Library Loading
# =============================================================================

def _load_library():
    """Load the LaprdusTTS DLL."""
    global _lib
    if _lib is not None:
        return _lib

    if not os.path.exists(_dll_path):
        raise OSError("LaprdusTTS DLL not found: %s" % _dll_path)

    try:
        _lib = ctypes.windll.LoadLibrary(_dll_path)
    except OSError as e:
        raise OSError("Failed to load LaprdusTTS DLL: %s" % str(e))

    # Configure function signatures
    _configure_functions(_lib)

    return _lib

def _configure_functions(lib):
    """Configure ctypes function signatures."""

    # Lifecycle functions
    lib.laprdus_create.argtypes = []
    lib.laprdus_create.restype = LaprdusHandle

    lib.laprdus_destroy.argtypes = [LaprdusHandle]
    lib.laprdus_destroy.restype = None

    lib.laprdus_init_from_file.argtypes = [
        LaprdusHandle,
        ctypes.c_char_p,
        ctypes.c_void_p,
        ctypes.c_size_t
    ]
    lib.laprdus_init_from_file.restype = LaprdusError

    lib.laprdus_is_initialized.argtypes = [LaprdusHandle]
    lib.laprdus_is_initialized.restype = ctypes.c_int

    # Voice configuration
    lib.laprdus_set_speed.argtypes = [LaprdusHandle, ctypes.c_float]
    lib.laprdus_set_speed.restype = LaprdusError

    lib.laprdus_set_pitch.argtypes = [LaprdusHandle, ctypes.c_float]
    lib.laprdus_set_pitch.restype = LaprdusError

    lib.laprdus_set_user_pitch.argtypes = [LaprdusHandle, ctypes.c_float]
    lib.laprdus_set_user_pitch.restype = LaprdusError

    lib.laprdus_set_volume.argtypes = [LaprdusHandle, ctypes.c_float]
    lib.laprdus_set_volume.restype = LaprdusError

    lib.laprdus_set_inflection_enabled.argtypes = [LaprdusHandle, ctypes.c_int]
    lib.laprdus_set_inflection_enabled.restype = LaprdusError

    # Synthesis functions
    lib.laprdus_synthesize.argtypes = [
        LaprdusHandle,
        ctypes.c_char_p,
        ctypes.POINTER(ctypes.POINTER(ctypes.c_int16)),
        ctypes.POINTER(LaprdusAudioFormat)
    ]
    lib.laprdus_synthesize.restype = ctypes.c_int32

    lib.laprdus_free_buffer.argtypes = [ctypes.POINTER(ctypes.c_int16)]
    lib.laprdus_free_buffer.restype = None

    lib.laprdus_cancel.argtypes = [LaprdusHandle]
    lib.laprdus_cancel.restype = None

    # Utility functions
    lib.laprdus_get_error_message.argtypes = [LaprdusHandle]
    lib.laprdus_get_error_message.restype = ctypes.c_char_p

    lib.laprdus_get_version.argtypes = []
    lib.laprdus_get_version.restype = ctypes.c_char_p

    lib.laprdus_get_default_format.argtypes = [ctypes.POINTER(LaprdusAudioFormat)]
    lib.laprdus_get_default_format.restype = None

    lib.laprdus_error_to_string.argtypes = [LaprdusError]
    lib.laprdus_error_to_string.restype = ctypes.c_char_p

    # Voice selection functions
    lib.laprdus_get_voice_count.argtypes = []
    lib.laprdus_get_voice_count.restype = ctypes.c_uint32

    lib.laprdus_get_voice_info.argtypes = [
        ctypes.c_uint32,
        ctypes.POINTER(LaprdusVoiceInfo)
    ]
    lib.laprdus_get_voice_info.restype = LaprdusError

    lib.laprdus_get_voice_info_by_id.argtypes = [
        ctypes.c_char_p,
        ctypes.POINTER(LaprdusVoiceInfo)
    ]
    lib.laprdus_get_voice_info_by_id.restype = LaprdusError

    lib.laprdus_set_voice.argtypes = [
        LaprdusHandle,
        ctypes.c_char_p,
        ctypes.c_char_p
    ]
    lib.laprdus_set_voice.restype = LaprdusError

    lib.laprdus_get_current_voice.argtypes = [LaprdusHandle]
    lib.laprdus_get_current_voice.restype = ctypes.c_char_p

    # Dictionary functions
    lib.laprdus_load_dictionary.argtypes = [LaprdusHandle, ctypes.c_char_p]
    lib.laprdus_load_dictionary.restype = LaprdusError

    lib.laprdus_load_dictionary_from_memory.argtypes = [
        LaprdusHandle,
        ctypes.c_char_p,
        ctypes.c_size_t
    ]
    lib.laprdus_load_dictionary_from_memory.restype = LaprdusError

    lib.laprdus_clear_dictionary.argtypes = [LaprdusHandle]
    lib.laprdus_clear_dictionary.restype = None

    # Spelling dictionary functions
    lib.laprdus_load_spelling_dictionary.argtypes = [LaprdusHandle, ctypes.c_char_p]
    lib.laprdus_load_spelling_dictionary.restype = LaprdusError

    lib.laprdus_load_spelling_dictionary_from_memory.argtypes = [
        LaprdusHandle,
        ctypes.c_char_p,
        ctypes.c_size_t
    ]
    lib.laprdus_load_spelling_dictionary_from_memory.restype = LaprdusError

    lib.laprdus_clear_spelling_dictionary.argtypes = [LaprdusHandle]
    lib.laprdus_clear_spelling_dictionary.restype = None

    lib.laprdus_synthesize_spelled.argtypes = [
        LaprdusHandle,
        ctypes.c_char_p,
        ctypes.POINTER(ctypes.POINTER(ctypes.c_int16)),
        ctypes.POINTER(LaprdusAudioFormat)
    ]
    lib.laprdus_synthesize_spelled.restype = ctypes.c_int32

    # Emoji dictionary functions
    lib.laprdus_load_emoji_dictionary.argtypes = [LaprdusHandle, ctypes.c_char_p]
    lib.laprdus_load_emoji_dictionary.restype = LaprdusError

    lib.laprdus_load_emoji_dictionary_from_memory.argtypes = [
        LaprdusHandle,
        ctypes.c_char_p,
        ctypes.c_size_t
    ]
    lib.laprdus_load_emoji_dictionary_from_memory.restype = LaprdusError

    lib.laprdus_set_emoji_enabled.argtypes = [LaprdusHandle, ctypes.c_int]
    lib.laprdus_set_emoji_enabled.restype = LaprdusError

    lib.laprdus_is_emoji_enabled.argtypes = [LaprdusHandle]
    lib.laprdus_is_emoji_enabled.restype = ctypes.c_int

    lib.laprdus_clear_emoji_dictionary.argtypes = [LaprdusHandle]
    lib.laprdus_clear_emoji_dictionary.restype = None

    # Pause settings functions
    lib.laprdus_set_sentence_pause.argtypes = [LaprdusHandle, ctypes.c_uint32]
    lib.laprdus_set_sentence_pause.restype = LaprdusError

    lib.laprdus_set_comma_pause.argtypes = [LaprdusHandle, ctypes.c_uint32]
    lib.laprdus_set_comma_pause.restype = LaprdusError

    lib.laprdus_set_newline_pause.argtypes = [LaprdusHandle, ctypes.c_uint32]
    lib.laprdus_set_newline_pause.restype = LaprdusError

    lib.laprdus_get_sentence_pause.argtypes = [LaprdusHandle]
    lib.laprdus_get_sentence_pause.restype = ctypes.c_uint32

    lib.laprdus_get_comma_pause.argtypes = [LaprdusHandle]
    lib.laprdus_get_comma_pause.restype = ctypes.c_uint32

    lib.laprdus_get_newline_pause.argtypes = [LaprdusHandle]
    lib.laprdus_get_newline_pause.restype = ctypes.c_uint32

    lib.laprdus_set_spelling_pause.argtypes = [LaprdusHandle, ctypes.c_uint32]
    lib.laprdus_set_spelling_pause.restype = LaprdusError

    lib.laprdus_get_spelling_pause.argtypes = [LaprdusHandle]
    lib.laprdus_get_spelling_pause.restype = ctypes.c_uint32

    # Number mode functions
    lib.laprdus_set_number_mode.argtypes = [LaprdusHandle, ctypes.c_int]
    lib.laprdus_set_number_mode.restype = LaprdusError

    lib.laprdus_get_number_mode.argtypes = [LaprdusHandle]
    lib.laprdus_get_number_mode.restype = ctypes.c_int

# =============================================================================
# Public API Functions
# =============================================================================

def is_available():
    """Check if the LaprdusTTS library is available."""
    try:
        _load_library()
        return os.path.exists(_phonemes_path)
    except OSError:
        return False

def get_version():
    """Get the library version string."""
    lib = _load_library()
    version = lib.laprdus_get_version()
    if version:
        # Handle both Python 2 and 3
        if isinstance(version, bytes):
            return version.decode("utf-8")
        return version
    return "unknown"

def get_phonemes_path():
    """Get the path to the phonemes.bin file."""
    return _phonemes_path


def get_data_directory():
    """Get the directory containing voice data files."""
    return _voices_dir


def get_dictionaries_directory():
    """Get the directory containing dictionary files."""
    return _dicts_dir


def get_voice_count():
    """Get the number of available voices."""
    lib = _load_library()
    return lib.laprdus_get_voice_count()


def get_voice_info(index):
    """
    Get voice information by index.

    Args:
        index: Voice index (0 to count-1)

    Returns:
        dict with voice info, or None on failure
    """
    lib = _load_library()
    info = LaprdusVoiceInfo()
    result = lib.laprdus_get_voice_info(index, ctypes.byref(info))
    if result != LAPRDUS_OK:
        return None

    return _voice_info_to_dict(info)


def get_voice_info_by_id(voice_id):
    """
    Get voice information by ID.

    Args:
        voice_id: Voice ID string (e.g., "josip")

    Returns:
        dict with voice info, or None on failure
    """
    lib = _load_library()
    info = LaprdusVoiceInfo()

    if isinstance(voice_id, bytes):
        voice_id_bytes = voice_id
    else:
        voice_id_bytes = voice_id.encode("utf-8")

    result = lib.laprdus_get_voice_info_by_id(voice_id_bytes, ctypes.byref(info))
    if result != LAPRDUS_OK:
        return None

    return _voice_info_to_dict(info)


def _voice_info_to_dict(info):
    """Convert LaprdusVoiceInfo structure to Python dict."""
    def decode_str(s):
        if s is None:
            return None
        if isinstance(s, bytes):
            return s.decode("utf-8", errors="replace")
        return s
